<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageCalibration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/calibration_txt_title"
            android:gravity="center_horizontal"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/calibration_txt_timer"
            android:gravity="center_horizontal"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_timer"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/calibration_txt_temp"
            android:gravity="center_horizontal"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_temperature"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/calibration_device_read"
            android:gravity="center_horizontal"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_device_read"
            android:textSize="30sp" />
        <Button
            android:id="@+id/calibration_btn_start"
            style="style=@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_start_calibration" />

        <Button
            android:id="@+id/calibration_btn_sure"
            style="style=@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_sure" />

        <Button
            android:id="@+id/calibration_btn_re_calibration"
            style="style=@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_re_calibration" />

        <Button
            android:id="@+id/calibration_btn_return"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_return" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>