<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageMainMenu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/menu_btn_calibration_0D1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_calibration0D1" />



        <Button
            android:id="@+id/menu_btn_calibration_0D5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_calibration0D5" />


        <Button
            android:id="@+id/menu_btn_measurement_CC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_measurement_concrete_chloride" />
        <Button
            android:id="@+id/menu_btn_measurement_FAC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_measurement_fine_aggregate_chloride" />
        <Button
            android:id="@+id/menu_btn_measurement_WC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_measurement_water_chloride" />

        <Button
            android:id="@+id/menu_btn_load_delete_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_load_delete_data" />


        <Button
            android:id="@+id/menu_btn_return"
            style="style=@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_return" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>