<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagePrinter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/print_txt_title"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/print_txt_date"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_date"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/print_txt_temp"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_temperature"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/print_txt_typing"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_temp"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/print_txt_1"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_temp"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/print_txt_2"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_temp"
            android:textSize="25sp" />
        <Button
            android:id="@+id/print_btn_print"
            style="style=@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_print"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/print_btn_return"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="style=@style/Widget.AppCompat.Button"
            android:text="@string/str_return"
            android:textSize="30sp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>