<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageLoadDeleteData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/data_btn_return"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="style=@style/Widget.AppCompat.Button"
                android:text="@string/str_return" />

            <Button
                android:id="@+id/data_btn_load"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="style=@style/Widget.AppCompat.Button"
                android:text="@string/str_load" />

            <Button
                android:id="@+id/data_btn_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="style=@style/Widget.AppCompat.Button"
                android:text="@string/str_delete" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/data_txt_select"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@drawable/text_bg2"
                    android:text="@string/str_select_data"
                    android:textSize="15sp"
                    android:textColor="@color/red"/>
            </LinearLayout>

            <ListView
                android:id="@+id/data_list_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>